corrected the overflow in get started window

--- a/src/containers/applications/apps/assets/getstarted.scss
+++ b/src/containers/applications/apps/assets/getstarted.scss
@@ -39,7 +39,6 @@
     font-size: 20px;
     font-weight: 600;
     padding-top: 36px;
-    width: 362px;
     animation: transition_effect 1.4s;
   }
   .list_oobe {
